--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,59 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+
+h2 {
+    text-align: center;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .container {
-  display: flex;
-  margin-top: 100px;
+    display: flex;
+    margin-top: 100px;
 }
 
 .list-waypoints {
-  border: 1px solid black;
-  width: 20%;
-  height: 200px;
+    border: 1px solid black;
+    width: 20%;
+    height: 200px;
 }
 
 p.error {
-  font-weight: bold;
-  color: red;
+    font-weight: bold;
+    color: red;
+}
+
+.list-waypoints {
+    margin-right: 50px;
+    width: 30%;
+}
+
+.hourly-weather {
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 70%;
+}
+
+.hourly-weather td {
+    border: 1px solid black;
+    padding: 2px;
 }
